added link to upstream

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <section>
             <h1>Jenkins Build Per Branch</h1>
 
-            <p>The code in this repo lets you automatically generate Jenkins jobs for new branches in a specified repository, using templates to create the jobs.</p>
+            <p>This is fork of <a href="http://entagen.github.io/jenkins-build-per-branch/">http://entagen.github.io/jenkins-build-per-branch/</a> The code in this repo lets you automatically generate Jenkins jobs for new branches in a specified repository, using templates to create the jobs.</p>
 
             <p>Using it is as easy as:
             <ul>
